--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 
 services:
     redis:
@@ -21,7 +20,35 @@ services:
         restart: unless-stopped
         depends_on:
             - redis
+        
+
+    postgres:
+        image: postgres:16
+        container_name: postgres_db
+        restart: always
+        environment:
+            POSTGRES_USER: root
+            POSTGRES_PASSWORD: root
+            POSTGRES_DB: chitChatDB
+        ports:
+            - "5432:5432"
+        volumes:
+            - postgres_data:/var/lib/postgresql/data
+        
+    pgadmin:
+        image: dpage/pgadmin4
+        container_name: pgadmin
+        restart: always
+        environment:
+            PGADMIN_DEFAULT_EMAIL: root@example.com
+            PGADMIN_DEFAULT_PASSWORD: root
+        ports:
+            - "5050:80"
+        depends_on:
+            - postgres
 
 volumes:
     redis_data:
     redisinsight_data:
+    postgres_data:
+
